# grafton-ndi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/actions/: README.md
.github/actions/setup-ndi-linux/: action.yml
.github/actions/setup-ndi-macos/: action.yml
.github/actions/setup-ndi-windows/: action.yml
.github/workflows/: debug-ndi-macos.yml  rust.yml  setup-environment.yml
docs/: 1.0_PREPARATION_SUMMARY.md  API_STABILITY.md
docs/migration/: 0.2-to-0.3.md  0.3-to-0.4.md  0.4-to-0.5.md  0.5-to-0.6.md  0.6-to-0.7.md  0.7-to-0.8.md  0.8-to-0.9.md  v0.6-to-v0.7.md
examples/: NDIlib_Find.rs  NDIlib_Recv_Audio.rs  NDIlib_Recv_Audio_16bpp.rs  NDIlib_Recv_FrameSync.rs  NDIlib_Recv_PNG.rs  NDIlib_Recv_PTZ.rs  NDIlib_Send_Audio.rs  NDIlib_Send_Video.rs  async_send.rs  concurrent_capture.rs  status_monitor.rs  zero_copy_send.rs
examples/common/: mod.rs
scripts/: test-ndi-macos.sh
src/: async_runtime.rs  capture.rs  error.rs  finder.rs  frames.rs  framesync.rs  lib.rs  ndi_lib.rs  receiver.rs  recv_guard.rs  runtime.rs  sender.rs  tests.rs  waitable_completion.rs
tests/: async_token_stress.rs  async_tokens.rs  callback_lifetime_stress.rs  compile_contracts.rs  diagnose_windows_ci.rs  windows_dll_check.rs
tests/ui/: async_token_lifetime.rs  async_token_metadata_lifetime.rs  audio_frame_lifetime.rs  frame_lifetime.rs  metadata_frame_lifetime.rs
tests/ui/fail/: async_token_prevents_buffer_drop.rs  async_token_prevents_buffer_drop.stderr  async_token_prevents_buffer_mutation.rs  async_token_prevents_buffer_mutation.stderr  async_token_prevents_buffer_replace.rs  async_token_prevents_buffer_replace.stderr  async_token_prevents_drop_metadata.rs  async_token_prevents_drop_metadata.stderr  async_token_prevents_drop_sender.rs  async_token_prevents_drop_sender.stderr  async_token_prevents_second_send.rs  async_token_prevents_second_send.stderr  borrowed_framesync_refs_are_not_send.rs  borrowed_framesync_refs_are_not_send.stderr  borrowed_receiver_refs_are_not_send.rs  borrowed_receiver_refs_are_not_send.stderr  framesync_audio_ref_outlives_framesync.rs  framesync_audio_ref_outlives_framesync.stderr  framesync_video_ref_outlives_framesync.rs  framesync_video_ref_outlives_framesync.stderr  receiver_audio_ref_outlives_receiver.rs  receiver_audio_ref_outlives_receiver.stderr  receiver_metadata_ref_outlives_receiver.rs  receiver_metadata_ref_outlives_receiver.stderr  receiver_video_ref_outlives_receiver.rs  receiver_video_ref_outlives_receiver.stderr
tests/ui/pass/: async_token_buffer_reuse_after_drop.rs  async_token_buffer_reuse_after_wait.rs  borrowed_frame_wrapper_can_drop_before_token.rs  borrowed_refs_are_not_send.rs  framesync_refs_in_scope.rs  owned_frames_are_send.rs  receiver_refs_in_scope.rs
