[package]
name = "grafton-ndi"
version = "0.4.0"
edition = "2021"
build = "build.rs"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Unofficial idiomatic Rust bindings for the NDI 6 SDK"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-ndi"
homepage = "https://www.grafton.ai"
categories = ["api-bindings"]
keywords = ["ndi", "video", "audio", "network"]
readme = "README.md"
exclude = ["target/", ".gitignore", ".github/", "NDI_6_SDK.zip"]

[dependencies]
png = "0.17.16"
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
lodepng = "3.11.0"

[dev-dependencies]
