[package]
name = "grafton-ndi"
version = "0.8.1"
edition = "2021"
rust-version = "1.75"
build = "build.rs"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "High-performance Rust bindings for the NDI® 6 SDK - real-time IP video streaming"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-ndi"
homepage = "https://www.grafton.ai"
documentation = "https://docs.rs/grafton-ndi"
categories = ["api-bindings", "multimedia::video", "network-programming"]
keywords = ["ndi", "video", "streaming", "broadcast", "realtime"]
readme = "README.md"
exclude = ["target/", ".gitignore", ".github/", "NDI_6_SDK.zip", "docs/"]

[dependencies]
num_enum = "0.7"
once_cell = "1.20"
png = "0.17.16"
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
lodepng = "3.11.0"

[features]
default = []
# Enable NDI Advanced SDK features (requires NDI Advanced SDK)
# This includes async video completion callbacks and other advanced functionality
advanced_sdk = []

[dev-dependencies]
ctrlc = "3.4"
