[package]
name = "grafton-ndi"
version = "0.10.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "High-performance Rust bindings for the NDI® 6 SDK - real-time IP video streaming"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-ndi"
homepage = "https://www.grafton.ai"
documentation = "https://docs.rs/grafton-ndi"
categories = ["api-bindings", "multimedia::video", "network-programming"]
keywords = ["ndi", "video", "streaming", "broadcast", "realtime"]
readme = "README.md"
exclude = ["target/", ".gitignore", ".github/", "NDI_6_SDK.zip", "docs/"]

[dependencies]
num_enum = "0.7.5"
once_cell = "1.20"
png = "0.18"
thiserror = "2.0.17"

# Optional dependencies for image-encoding feature
base64 = { version = "0.22", optional = true }
jpeg-encoder = { version = "0.6", optional = true }

# Optional dependencies for async runtime integration
tokio = { version = "1.42", optional = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-std = { version = "1.13", optional = true, features = ["attributes"] }

[build-dependencies]
bindgen = "0.72.1"
lodepng = "3.12.1"

[features]
default = []
# Enable NDI Advanced SDK features (requires NDI Advanced SDK)
# This includes async video completion callbacks and other advanced functionality
advanced_sdk = []
# Enable image encoding support (PNG, JPEG, data URLs)
# Adds dependencies: base64, jpeg-encoder
image-encoding = ["dep:base64", "dep:jpeg-encoder"]
# Enable async runtime integration for Tokio
# Adds dependency: tokio
tokio = ["dep:tokio"]
# Enable async runtime integration for async-std
# Adds dependency: async-std
async-std = ["dep:async-std"]

[dev-dependencies]
ctrlc = "3.5"
